--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,13 @@
     <title></title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<div>
-<div <span class="highlight">ng-include='"./header.html"'</span></div>
-<div <span class="highlight">ng-view</span></div>
+
+<body>
+
+<span class="highlight">ng-app="tutorialWebApp"</span>
+
+<div> <span class="highlight">ng-include='"./header.html"'</span></div>
+<div> <span class="highlight">ng-view</span></div>
 <span>this app is so cool</span>
 <p>it's straight up magic</p>
 <span class="hightlight">
